--- a/src/App.css
+++ b/src/App.css
@@ -144,18 +144,19 @@
   width: 85%;
   margin: 0 auto;
 }
+
 .addButtContainer {
   display: flex;
   padding: 10px;
   justify-content: space-between;
-  width: 500px;
+  width: 600px;
 }
 .addButt {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgb(156, 156, 156);
-  width: 180px;
+  border: 2px solid rgb(156, 156, 156);
+  width: 280px;
   font-size: 20px;
   border-radius: 10px;
   cursor: pointer;
@@ -167,9 +168,181 @@
 }
 .graph {
   border: 1px solid blue;
-  width: 500px;
+  width: 600px;
+}
+
+.cardBox {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgb(211, 211, 211);
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+.gasto {
+  border-color: rgb(255, 106, 106);
+}
+.renda {
+  border-color: rgb(69, 214, 69);
+}
+.cardGasto {
+  color: rgb(255, 106, 106);
+}
+.inputBox {
+  border: 1px solid black;
+}
+.modalBody {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modalCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+}
+.modalInput {
+  text-align: center;
+  border: 1px solid rgb(206, 206, 206);
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+.CardInfoInput {
+  text-align: center;
+  border: 1px solid rgb(206, 206, 206);
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+.cardTitle {
+  font-size: 30px;
+}
+.selectContainer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  width: 200px;
+}
+
+.select {
+  border-bottom: 1px solid black;
+  width: 70px;
+  padding: 2px;
+  cursor: pointer;
+}
+.selectInfo {
+  border-bottom: 1px solid black;
+  width: 70px;
+  padding: 2px;
+  cursor: pointer;
+}
+.buttons {
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 80px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.edit:hover {
+  color: white;
+  background-color: #3697ff;
+}
+.del {
+  display: block;
+  color: rgb(255, 106, 106);
+  cursor: pointer;
+  position: absolute;
+  top: 320px;
+}
+.del:hover {
+  color: white;
+  background-color: rgb(255, 106, 106);
+}
+.modalSave {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 100px;
+  height: 34px;
+  margin-top: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #3697ff;
+}
+.modalSave:hover {
+  border-color: rgb(0, 89, 255);
 }
 .totalContainer {
   border: 1px solid rgb(255, 56, 89);
-  width: 500px;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.total {
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
+  width: 330px;
+}
+.balance {
+  border-top: 1px solid rgb(120, 120, 120);
+}
+.totalBox {
+  border: 1px solid rgb(216, 216, 216);
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+.cardsContainer {
+  height: 900px;
+  overflow-y: scroll;
+}
+.cardsContainer::-webkit-scrollbar {
+  display: none;
+}
+.cardInfoBody {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
+}
+.cardInfoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+  position: relative;
 }
