--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,7 @@
   padding: 20px;
   border-radius: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  margin-top: 20px;
 }
 .cardsContainer {
   height: 900px;
@@ -343,4 +344,18 @@
   height: 400px;
   border-radius: 20px;
   position: relative;
+}
+.totalInfoContainer {
+  border: 1px solid rgb(216, 216, 216);
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  font-size: 20px;
+}
+.moreInfo {
+  display: flex;
+  justify-content: space-between;
+  width: 330px;
+  padding: 5px;
+  border-bottom: 1px solid rgb(225, 225, 225);
 }
