--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #e0efff;
-  border-bottom: 2px solid #b8b8b8;
+  background: linear-gradient(90deg, #25a6ca, #e6efff);
+  border-bottom: 2px solid #d9d9d9;
   height: 80px;
   width: 100%;
 }
@@ -29,7 +29,7 @@
   align-items: center;
   padding: 16px;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 8px;
   height: 20px;
   margin-left: 40px;
   cursor: pointer;
@@ -128,14 +128,19 @@
 }
 .calendarDiv {
   display: flex;
+  justify-content: space-between;
   border: 1px solid rgb(186, 186, 186);
-  padding: 3px;
+  padding: 4px;
+  cursor: default;
   border-radius: 10px;
-  cursor: pointer;
   margin-right: 200px;
+  width: 230px;
 }
 .calendar {
   width: 25px;
+}
+.calendarArrow {
+  cursor: pointer;
 }
 .main {
   display: flex;
@@ -240,6 +245,7 @@
   justify-content: space-around;
   margin-top: 20px;
   width: 200px;
+  position: relative;
 }
 
 .select {
@@ -249,10 +255,11 @@
   cursor: pointer;
 }
 .selectInfo {
-  border-bottom: 1px solid black;
   width: 70px;
   padding: 2px;
   cursor: pointer;
+  position: absolute;
+  right: 178px;
 }
 .buttons {
   border: 1px solid black;
@@ -358,4 +365,12 @@
   width: 330px;
   padding: 5px;
   border-bottom: 1px solid rgb(225, 225, 225);
+}
+.filterExpense {
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.filterExpense:hover {
+  color: red;
 }
