--- a/src/App.css
+++ b/src/App.css
@@ -142,9 +142,9 @@ body,
 .calendarDiv {
   display: flex;
   justify-content: space-between;
-
   border: 1px solid rgb(186, 186, 186);
   padding: 4px;
+  align-items: center;
   cursor: default;
   border-radius: 10px;
   margin-right: 200px;
@@ -162,6 +162,7 @@ body,
   justify-content: space-around;
   width: 85%;
   margin: 0 auto;
+  flex-wrap: wrap;
 }
 
 .addButtContainer {
@@ -376,6 +377,7 @@ body,
   border-radius: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   font-size: 20px;
+  margin-top: 70px;
 }
 .moreInfo {
   display: flex;
@@ -398,11 +400,12 @@ body,
 .dateInput::-webkit-calendar-picker-indicator {
   display: none;
 }
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-wrap: unset;
   }
   .header {
     height: 80px;
@@ -485,6 +488,9 @@ body,
 
   .totalContainer {
     margin-top: 20px;
+  }
+  .totalInfoContainer {
+    margin-top: 0px;
   }
   .cardsContainer {
     height: 300px;
