--- a/src/App.css
+++ b/src/App.css
@@ -386,6 +386,14 @@ body,
   padding: 5px;
   border-bottom: 1px solid rgb(225, 225, 225);
 }
+.allInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  padding: 5px;
+  border-bottom: 1px solid rgb(225, 225, 225);
+}
 .filterExpense {
   cursor: pointer;
   transition: 0.3s;
@@ -400,7 +408,7 @@ body,
 .dateInput::-webkit-calendar-picker-indicator {
   display: none;
 }
-@media (max-width: 900px) {
+@media (max-width: 700px) {
   .main {
     flex-direction: column;
     align-items: center;
@@ -523,6 +531,10 @@ body,
     margin-top: 10px;
   }
   .moreInfo {
+    width: 325px;
+    padding: 5px;
+  }
+  .allInfo {
     width: 325px;
     padding: 5px;
   }
