--- a/src/App.css
+++ b/src/App.css
@@ -541,3 +541,92 @@ body,
     padding: 5px;
   }
 }
+.simulationBody {
+  display: flex;
+  justify-content: center;
+}
+.calcContainer {
+  margin-top: 30px;
+  width: 800px;
+  height: 330px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fbfbfb;
+  border: 1px solid rgb(221, 221, 221);
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.simulationCalcBox {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 66%;
+}
+.calcHeader {
+  font-size: 30px;
+}
+.calcInput {
+  padding: 10px;
+  border: 1px solid rgb(205, 205, 205);
+  width: 300px;
+  background-color: white;
+}
+.calcInputYear {
+  padding: 10px;
+  border: 1px solid rgb(205, 205, 205);
+  width: 275px;
+  background-color: white;
+}
+.calcUp {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.calcButtonsCont {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.calcButt {
+  font-size: 19px;
+  border: 1px solid rgb(236, 236, 236);
+  border-radius: 4px;
+  width: 120px;
+  cursor: pointer;
+  background-color: rgb(249, 249, 249);
+  transition: 0.3s;
+  margin-left: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.calcButt:hover {
+  color: rgb(97, 168, 255);
+}
+
+.simb {
+  width: 50px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-color: rgb(205, 205, 205);
+  border-width: 1px 0px 1px 1px;
+  background-color: #e9e9e9;
+}
+.clearButt {
+  cursor: pointer;
+  margin-right: 20px;
+  border-radius: 10px;
+  padding: 5px;
+  width: 80px;
+  transition: 0.3s;
+}
+.clearButt:hover {
+  background-color: rgb(229, 229, 229);
+}
+.yearButt {
+  border-color: rgb(205, 205, 205);
+  border-width: 1px 1px 1px 0px;
+}
