--- a/src/App.css
+++ b/src/App.css
@@ -631,3 +631,16 @@ body,
   border-color: rgb(205, 205, 205);
   border-width: 1px 1px 1px 0px;
 }
+@media (max-width: 700px) {
+  .calcHeader {
+    font-size: 25px;
+  }
+  .calcContainer {
+    width: 360px;
+    height: 540px;
+    justify-content: space-around;
+  }
+  .calcUp {
+    flex-direction: column;
+  }
+}
