--- a/src/App.css
+++ b/src/App.css
@@ -544,6 +544,8 @@ body,
 .simulationBody {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .calcContainer {
   margin-top: 30px;
@@ -643,4 +645,50 @@ body,
   .calcUp {
     flex-direction: column;
   }
+}
+
+.simulatorResultContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 1000px;
+  height: 200px;
+  margin-top: 20px;
+  background-color: #fbfbfb;
+  border: 1px solid rgb(221, 221, 221);
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.resultHeader {
+  font-size: 26px;
+  color: #25a6ca;
+  font-weight: bold;
+}
+.resultBoxes {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+.rBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 240px;
+  margin: 20px;
+  border: 1px solid rgb(221, 221, 221);
+  padding: 15px;
+  border-radius: 3px;
+  background-color: white;
+}
+.boxTitle {
+  font-size: 15px;
+}
+.boxTotal {
+  font-size: 24px;
+}
+.finalBox {
+  background-color: #25a6ca;
+  color: white;
 }
