--- a/src/App.css
+++ b/src/App.css
@@ -633,19 +633,6 @@ body,
   border-color: rgb(205, 205, 205);
   border-width: 1px 1px 1px 0px;
 }
-@media (max-width: 700px) {
-  .calcHeader {
-    font-size: 25px;
-  }
-  .calcContainer {
-    width: 360px;
-    height: 540px;
-    justify-content: space-around;
-  }
-  .calcUp {
-    flex-direction: column;
-  }
-}
 
 .simulatorResultContainer {
   display: flex;
@@ -667,6 +654,7 @@ body,
 }
 .resultBoxes {
   display: flex;
+  align-items: center;
   width: 100%;
   justify-content: space-around;
 }
@@ -691,4 +679,28 @@ body,
 .finalBox {
   background-color: #25a6ca;
   color: white;
+}
+@media (max-width: 700px) {
+  .calcHeader {
+    font-size: 25px;
+  }
+  .calcContainer {
+    width: 360px;
+    height: 540px;
+    justify-content: space-around;
+  }
+  .calcUp {
+    flex-direction: column;
+  }
+  .simulatorResultContainer {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    height: 470px;
+    width: 360px;
+  }
+  .resultBoxes {
+    flex-direction: column;
+  }
+  .rBox {
+  }
 }
